src/styles/Home.css
body {
  background-color: #310;
}

#nav {
  background-image: linear-gradient(#410808, #820f0f);
}

.main-bg {
  background-image: url('../images/mainmenu.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}
  
.text-header {
  color: #cb6;
}
.text-subheader {
  color: #feb;
}

.block-darker {
  background-color: #240c00;
}
.block-lighter {
  background-color: #482a1a;
}

#about p {
  margin-top: 20px;
  text-indent: 4em;
  line-height: 2em;
  color: #edd;
}
#about ul {
  display: block;
  margin-bottom: 70px;
  text-align: center;
}
#about li {
  display: inline-block;
  padding: 19px;
}

#related .doc {
  display: inline-block;
  vertical-align: top;
  width: 275px;
  height: 145px;
  margin: 10px;
  padding: 15px;
  background: #482a1a;
  color: #feb;
}

#section .discussionist > .comma:last-child {
  display: none;
}

.accordion-collapsed .accordion-collapsable {
  display: none;
}
.accordion-collapsed .accordion-icon {
  transform: rotate(180deg); 
}

#section-info p {
  margin-bottom: 0.8em;
}
#section-info p:last-child {
  margin-bottom: 0em;
}

.provision p {
  text-indent: 3em;
  line-height: 2em;
  margin-bottom: 0.8em;
}
.provision u {
  color: #12ad75;
}
.provision strike {
  color: #ff5151;
}

.truncate-7 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 7;
  -webkit-box-orient: vertical;
}

.truncate-500 {
  display: -webkit-box;
  -webkit-line-clamp: 5; /* Adjust the number of lines as needed */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  /* white-space: nowrap; */
  max-height: 100ch;
}

.expanded {
  /* Remove truncation styles */
  -webkit-line-clamp: initial;
  max-height: none;
}

#truehits_div {
  position: absolute;
  left: -9999px;
}

#react-paginate ul {
  display: inline-block;
  margin-left: 20px;
  padding-left: 0;
}

#react-paginate li {
  display: inline-block;
  border: 1px solid rgb(224, 224, 224);
  color: #fff;
  cursor: pointer;
  margin-right: 4px;
  border-radius: 5px;
  margin-bottom: 5px;
}

#react-paginate li a {
    padding: 2px 10px;
    display: inline-block;
    color: #fff;
    outline: none;
}

#react-paginate li.active {
  background: rgb(224, 224, 224);
  outline: none;
}

